# architecture-patterns-learning

./: README.md  domain_model.py  pyproject.toml
src/: custom_types.py  domain.py  domain_model.py  exceptions.py  orm.py  repository.py
src/domain/: __init__.py  models.py  services.py
tests/: test_domain.py  test_domain_model.py  test_orm.py  test_repository.py
