[tool.pytest.ini_options]

[tool.poetry]
name = "architecture-patterns-learning"
version = "0.1.0"
description = ""
authors = ["t.tatiyev <t.tatiyev@trafficwave.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
